<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="reservation">Reservation</string>
    <string name="name">Name:</string>
    <string name="mobile_number">Mobile number:</string>
    <string name="number_of_people">Number of people:</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="smoking_area">Smoking area</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
</resources>